# go-client

./: .gitignore  CMakeLists.txt  README.md
data/: fragment_light.glsl  fragment_shadow.glsl  vertex_light.glsl  vertex_shadow.glsl
data/old glsl shaders/: fragment.glsl  vertex.glsl
include/: board.h  camera.h  config.h  file_loader.h  game.h  graphics.h  networking.h  renderable.h  shader_program.h  texture.h  vao.h
src/: board.cpp  camera.cpp  config.cpp  file_loader.cpp  game.cpp  graphics.cpp  main.cpp  networking.cpp  renderable.cpp  shader_program.cpp  texture.cpp  vao.cpp
